--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="bg-gray-50">
 
 <head>
   <meta charset="utf-8" />
@@ -9,9 +9,8 @@
   <title>Solid App</title>
 </head>
 
-<body style="margin:0;min-height: 100vh;">
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div style="min-height: 100vh;" id="root"></div>
+<body> <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
 
   <script src="/src/index.tsx" type="module"></script>
 </body>
