--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <title>Cafe manager</title>
 </head>
 
-<body> <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+<body class="min-h-screen"> <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div class="min-h-screen" id="root"></div>
 
   <script src="/src/index.tsx" type="module"></script>
 </body>
